--- a/back/package.json
+++ b/back/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon",
-    "start" : "tsc && node index",
+    "dev": "nodemon",
+    "start": "tsc && node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -27,17 +27,38 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eslint": "^8.12.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "sequelize": "^6.18.0",
+    "sequelize-cli": "^6.4.1",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
+    "prettier": "2.6.2",
     "ts-node": "^10.7.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "airbnb",
+      "prettier"
+    ],
+    "rules": {
+      "react/prefer-stateless-function": 0,
+      "react/jsx-filename-extension": 0,
+      "react/jsx-one-expression-per-line": 0,
+      "react/prop-types": 0
+    },
+    "env": {
+      "browser": true
+    }
   }
 }
