--- a/back/package.json
+++ b/back/package.json
@@ -17,17 +17,14 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
-    "@types/helmet": "^4.0.0",
     "@types/hpp": "^0.2.2",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.23",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "eslint": "^8.12.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
@@ -37,13 +34,25 @@
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "prettier": "^2.6.2",
     "sequelize": "^6.18.0",
     "sequelize-cli": "^6.4.1",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/helmet": "^4.0.0",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "nodemon": "^2.0.15",
-    "prettier": "2.6.2",
+    "prettier": "^2.6.2",
+    "prettier-eslint": "^13.0.0",
     "ts-node": "^10.7.0"
   },
   "eslintConfig": {
