--- a/back/package.json
+++ b/back/package.json
@@ -5,43 +5,42 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "tsc && node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node index"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/bluebird": "^3.5.30",
     "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.12",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
-    "@types/hpp": "^0.2.2",
-    "@types/morgan": "^1.9.3",
-    "@types/passport": "^1.0.7",
-    "@types/passport-local": "^1.0.34",
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.6",
+    "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.0",
+    "@types/helmet": "0.0.45",
+    "@types/hpp": "^0.2.1",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^13.9.3",
+    "@types/passport": "^1.0.3",
+    "@types/passport-local": "^1.0.33",
+    "@types/validator": "^12.0.1",
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-session": "^1.17.2",
-    "helmet": "^5.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "helmet": "^3.21.3",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
-    "passport": "^0.5.2",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "prettier": "^2.6.2",
-    "sequelize": "^6.18.0",
-    "sequelize-cli": "^6.4.1",
-    "typescript": "^4.6.3"
+    "sequelize": "^5.21.5",
+    "sequelize-cli": "^5.5.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@types/helmet": "^4.0.0",
-    "@types/node": "^17.0.23",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
