--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "strict": true,
     "lib": ["es2015", "es2016", "es2017", "es2018", "es2019", "es2020"],
+    "esModuleInterop": true,
     "moduleResolution": "node",
-    "esModuleInterop": false,
+    "typeRoots": ["./types"],
     /* 기본 옵션 */
     "incremental": true /* 증분 컴파일 활성화 */,
     "target": "es2017" /* ECMAScript 목표 버전 설정: 'ES3'(기본), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
