--- a/back/package.json
+++ b/back/package.json
@@ -41,6 +41,8 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -52,6 +54,8 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "prettier-eslint": "^13.0.0",
+    "swagger-jsdoc": "^6.2.0",
+    "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.7.0"
   },
   "eslintConfig": {
