--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,8 @@
     "@types/helmet": "0.0.45",
     "@types/hpp": "^0.2.1",
     "@types/morgan": "^1.9.0",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.11",
     "@types/node": "^13.9.3",
     "@types/passport": "^1.0.3",
     "@types/passport-local": "^1.0.33",
@@ -44,6 +46,7 @@
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/parser": "^5.17.0",
+    "aws-sdk": "^2.1108.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -51,6 +54,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "prettier-eslint": "^13.0.0",
